# diffusion-lm-course

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
configs/: project.yaml
docs/: project-charter.md
docs/plans/: 2026-03-08-full-course-implementation.md
lessons/module0/lesson01-autoregressive-vs-diffusion/: README.md  notebook.ipynb
lessons/module0/lesson02-discrete-vs-continuous-noise/: README.md
lessons/module0/lesson03-denoising-objective/: README.md
lessons/module1/lab01-train-discrete-diffusion/: README.md  notebook.ipynb
lessons/module1/lesson01-forward-corruption-process/: README.md  notebook.ipynb
lessons/module1/lesson02-reverse-denoising-process/: README.md  notebook.ipynb
lessons/module1/lesson03-d3pm-from-scratch/: README.md  notebook.ipynb
lessons/module1/lesson04-mdlm/: README.md  notebook.ipynb
lessons/module1/lesson05-training-and-sampling/: README.md  notebook.ipynb
lessons/module2/lab01-controlled-generation/: README.md
lessons/module2/lesson01-token-to-embedding-space/: README.md  notebook.ipynb
lessons/module2/lesson02-forward-reverse-sde/: README.md
lessons/module2/lesson03-diffusion-lm-from-scratch/: README.md
lessons/module2/lesson04-cdcd/: README.md
lessons/module2/lesson05-rounding-decoding/: README.md
lessons/module3/lab01-compare-mdm-discrete/: README.md
lessons/module3/lesson01-mlm-as-diffusion/: README.md  notebook.ipynb
shared/datasets/: __init__.py  text.py
shared/models/: __init__.py  transformer.py
shared/utils/: __init__.py  device.py  seed.py  training.py
(+67 files in other folders)
