[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-lm-course"
version = "0.1.0"
description = "Code-first course teaching diffusion language models from first principles to deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Ozgur Guler"}]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["lessons"]
python_files = ["test_*.py"]
